--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 </ul>
             </div>
         </nav>
+
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h3>Quem somos</h3>
+                <img src="img/time.jpeg" class="rounded-circle" width="400" height="400">
+            </div>
+        </section>
     </body>
 
 </html>
