--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#serviços">Serviços</a>
                     </li>
                 </ul>
             </div>
@@ -31,8 +31,48 @@
             <div class="container-fluid quem-somos text-center margin">
                 <h3>Quem somos</h3>
                 <img src="img/time.jpeg" class="rounded-circle" width="400" height="400">
+                <h3>Somos um time comprometido com os resultados</h3>
             </div>
         </section>
+
+        <selection id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <p class="margin">PARCEIROS</p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4"> 
+                            <img src="img/digital_innovation_one.png" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/digital_innovation_one.png" width="100%">
+                        </div>
+                        <div class="col-md-4">
+                            <img src="img/digital_innovation_one.png" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </selection>
+        <section id="serviços">
+            <div class="container-fluid text-center margin serviços">
+                <h3 class="margin">Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/app.jpeg" width="100%">
+                        </div>
+                        <div class="col-lg-6">
+                            <p>Teste de textto</p>
+                            <img src="img/site.jpg" width="100%">
+                            <p>texto Teste</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="container-fluid text-center bg-footer margin">
+            <p>Desenvolvido por Rafael A. Marendaz</p>
+        </footer>
     </body>
 
 </html>
